Better mixin error handling